# r34-hooks

./: .gitignore  .vercelignore  Cargo.toml  Dockerfile  README.md  config.yaml  storage.json
.github/workflows/: docker.yml
handlers/: Cargo.toml  vercel.json
handlers/api/: invoke.rs
persistence/: Cargo.toml
persistence/src/: lib.rs  local.rs  postgrest.rs
r34-wrapper/: Cargo.toml
r34-wrapper/src/: errors.rs  lib.rs  models.rs
runner/: Cargo.toml
runner/src/: config.rs  main.rs
scraper/: Cargo.toml
scraper/src/: env.rs  lib.rs
scraper/src/hooks/: command.rs  discord.rs  local.rs  mod.rs
