[package]
name = "handlers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = { path = "../scraper" }
persistence = { path = "../persistence" }
serde_json = "1.0.96"
tokio = "1.47.1"
vercel_runtime = "1.1.6"

[[bin]]
name = "invoke"
path = "api/invoke.rs"
