[package]
name = "persistence"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.89"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres"] }
