[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[dependencies]
scraper = { path = "../scraper" }
persistence = { path = "../persistence" }
anyhow = "1.0.100"
figment = { version = "0.10.19", features = ["env", "toml", "yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
tokio-cron-scheduler = { version = "0.15.1", features = ["signal"] }
argh = "0.1.13"
